// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RIcon should render icon 1`] = `
<svg width="16" height="16" viewBox="0 0 18 18" aria-hidden="true" class="r-icon">
  <use xlink:href="#eye-usage"></use>
</svg>
`;

exports[`RIcon should render standalone icon with aria-label 1`] = `
<svg width="16" height="16" viewBox="0 0 18 18" role="img" ariaLabel="standalone icon" class="r-icon">
  <use xlink:href="#eye-usage"></use>
</svg>
`;
